some spacing issues fixed

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -151,7 +151,8 @@ i {
         width: 66%;
     }
 
-    sub-section {
+    .sub-section {
+        margin-top: 1em;
         width: 33%;
     }
 
